# Financial-Research-Agent

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py  test_api_key.py  test_api_simple.py  test_google_search.py
checkpoints/: e4c44543-2b9e-4951-bab3-95277099283f__0.json  e4c44543-2b9e-4951-bab3-95277099283f__1.json  e4c44543-2b9e-4951-bab3-95277099283f__2.json  e4c44543-2b9e-4951-bab3-95277099283f__3.json  e4c44543-2b9e-4951-bab3-95277099283f__4.json  e4c44543-2b9e-4951-bab3-95277099283f__5.json  e4c44543-2b9e-4951-bab3-95277099283f__6.json  e5e77ff2-430d-43ec-bc1c-139490b7677e__0.json  e5e77ff2-430d-43ec-bc1c-139490b7677e__1.json  e5e77ff2-430d-43ec-bc1c-139490b7677e__2.json  e5e77ff2-430d-43ec-bc1c-139490b7677e__3.json  e5e77ff2-430d-43ec-bc1c-139490b7677e__4.json  e5e77ff2-430d-43ec-bc1c-139490b7677e__5.json  e5e77ff2-430d-43ec-bc1c-139490b7677e__6.json  test-1__0.json  test-1__1.json  test-1__2.json  test-1__3.json  test-1__4.json  test-1__5.json  test-1__6.json  test-2__0.json  test-2__1.json  test-2__2.json  test-2__3.json  test-2__4.json  test-2__5.json  test-2__6.json
data/: aliases.json  companies.csv
docs/: docker.md  ipo.md  structure.md
src/finresearch_agent/: __init__.py  __main__.py  agent.py  cache.py  chat.py  cli.py  config.py  constants.py  datasources.py  formatter.py  identify.py  (+8 more)
tests/: test_chat_dedupe.py  test_explainer_guard.py  test_identify.py  test_ipo_report.py  test_rules.py  test_snapshot_determinism.py  test_state_integration.py  test_state_machine.py
(+31 files in other folders)
